<resources>
    <string name="app_name">Remote Site Monitor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">evartem studio</string>
    <string name="nav_header_subtitle">evartemstudio@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="timeout">Timeout</string>
    <string name="attempts">Attempts</string>
    <string name="historyDepth">History depth</string>
    <string name="address">Address (IP/URL)</string>
    <string name="addressHttp">Request URL</string>
    <string name="label">Label</string>
    <string name="run_every">Run every</string>
    <string name="ms">ms</string>
    <string name="requests">requests</string>
    <string name="apply">APPLY</string>
    <string name="test">TEST</string>
    <string name="max_waiting_time">max waiting time</string>
    <string name="attempts_tip">before counting downtime</string>
    <string name="how_often_the_task_is_run">how often the task is run</string>
    <string name="short_description">short description</string>
    <string name="ip_or_url">IP or URL</string>
    <string name="cancel">CANCEL</string>
    <string name="delete">DELETE</string>
    <string name="uptime">Uptime:</string>
    <string name="downtime">Downtime:</string>
    <string name="neverup">has never been up yet</string>
    <string name="never">never</string>
    <string name="lastsuccess">Last success:</string>
    <string name="historyDepthHint">The number of last responses to display</string>
    <string name="fieldsHint">Comma separated names of fields</string>
    <string name="httpRestAddressHint">http://someserver.com?param=1</string>
    <string name="json_fields">JSON fields</string>
    <string name="taskType_Pinging">Pinging task</string>
    <string name="taskType_Http">JSON request task</string>
    <string name="taskTypeDialogCaption">Create a task</string>
    <string name="addressLabel">Address:</string>
    <string name="lastDowntimeLasted">Last downtime lasted %sand ended %s</string>
</resources>
